unpackaged/main/default/objects/Threat__c/Threat__c.object-meta.xml
<CustomObject>
    <label>Threat</label>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Threat Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Threats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>