unpackaged/main/default/objects/Threat__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <label>Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Threats</relationshipLabel>
    <relationshipName>Threats</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>