unpackaged/main/default/objects/Threat__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the owner of the Threat.</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Threats</relationshipName>
    <type>Lookup</type>
</CustomField>