unpackaged/main/default/objects/Threat__c/fields/Threat__c.field-meta.xml
<CustomField>
    <fullName>Threat__c</fullName>
    <label>Threat</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>