unpackaged/main/default/objects/Threat__c/fields/Threat_Details__c.field-meta.xml
<CustomField>
    <fullName>Threat_Details__c</fullName>
    <label>Threat Details</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>