unpackaged/main/default/objects/Threat__c/validationRules/Threat_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Threat_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Resolution_Date__c) &lt;&gt;&quot;&quot;, TEXT(Status__c)=&quot;Ongoing&quot; )</errorConditionFormula>
    <errorDisplayField>Resolution_Date__c</errorDisplayField>
    <errorMessage>The Resolution Date field must be left blank if the Status is Ongoing</errorMessage>
</ValidationRule>