unpackaged/main/default/objects/Threat__c/validationRules/Threat_Date1.validationRule-meta.xml
<ValidationRule>
    <fullName>Threat_Date1</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Resolution_Date__c)=&quot;&quot;,TEXT(Status__c)&lt;&gt;&quot;Ongoing&quot;)</errorConditionFormula>
    <errorMessage>You must complete the Resolution Date field.</errorMessage>
</ValidationRule>